XMLExper/m12/m12_489_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLUnknown* tinyxml2::XMLElement::InsertNewUnknown(const char*)’:
tinyxml2.cpp:2079:33: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLUnknown*’ [-fpermissive]
 2079 |     return InsertEndChild(node) ? /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(node) : 0;
      |            ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                 |
      |                                 tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
